<resources>
    <string name="app_name">Whip</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_test">test</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="hello">hello</string>
    <string name="logout">Logout</string>
    <string name="car_brand">Car_brand</string>
    <string name="car_model">car_model</string>
    <string name="save">Save</string>
    <string name="car_brand1">Car brand</string>
    <string name="car_model1">Car model</string>
    <string name="engine_size">Engine size</string>
    <string name="power">Power</string>
    <string name="mileage">Mileage</string>
    <string name="my_announcements">My announcements</string>
    <string name="delete">Delete</string>
    <string name="price">Price</string>
    <string name="add_announcement">Add announcement</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="min_engine_size">Min engine size</string>
    <string name="max_engine_size">Max engine size</string>
    <string name="min_power">Min power</string>
    <string name="max_power">Max power</string>
    <string name="min_mileage">Min Mileage</string>
    <string name="max_mileage">Max Mileage</string>
    <string name="min_price">Min price</string>
    <string name="max_price">Max price</string>
    <string name="search">Search</string>
    <string name="clear_results">Clear results</string>
    <string name="results">Results</string>
    <string name="car_brand_info">Car Brand</string>
    <string name="car_model_info">Car Model</string>
    <string name="open_gallery">Open gallery</string>
    <string name="car_price_info">Price</string>
    <string name="car_mileage_info">Mileage</string>
    <string name="car_power_info">Engine power</string>
    <string name="car_engine_size_info">Engine size</string>
    <string name="edit">Edit</string>
    <string name="phone_number">Phone Number</string>
    <string name="car_brand2">Car brand</string>
</resources>