<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/carImageView"
        android:layout_width="match_parent"
        android:layout_height="263dp"
        android:src="@drawable/placeholder_image" />

    <TextView
        android:id="@+id/carBrandTextView"
        android:layout_width="361dp"
        android:layout_height="40dp"
        android:text="@string/car_brand_info"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/carModelTextView"
        android:layout_width="361dp"
        android:layout_height="40dp"
        android:text="@string/car_model_info"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/carPriceTextView"
        android:layout_width="361dp"
        android:layout_height="40dp"
        android:text="@string/car_price_info"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/carMileageTextView"
        android:layout_width="361dp"
        android:layout_height="40dp"
        android:text="@string/car_mileage_info"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/carPowerTextView"
        android:layout_width="361dp"
        android:layout_height="40dp"
        android:text="@string/car_power_info"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/carEngineSizeTextView"
        android:layout_width="361dp"
        android:layout_height="40dp"
        android:text="@string/car_engine_size_info"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="phone"
        android:text=""
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold" />

</LinearLayout>